--- a/views/index.html
+++ b/views/index.html
@@ -1,64 +1,171 @@
-<!-- 
- index.html - Ethereum Wallet
- 
+<!--
+index.html - Ethereum Wallet
  -->
 
 <!Doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="js/web3.min.js"></script>
-<script type="text/javascript" src="js/ethereumjs-tx-1.3.3.min.js"></script>
-<script src="https://code.jquery.com/jquery-latest.js "></script>
+	<meta charset="UTF-8">
 
-<!-- bootsrtap CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript" src="./js/web3.min.js"></script>
+	<script type="text/javascript" src="./js/ethereumjs-tx-1.3.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-latest.js "></script>
+	<script type="text/javascript" src="./js/qrcode.js"></script>
 
-<title>나의 전자기갑</title>
+	<!-- bootsrtap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
+	<title>My Ethereum Wallet</title>
 
-<script>
-$(document).ready(function(){
-  let DEBUG = 1;
-  const web3 = new Web3('https://ropsten.infura.io/v3/3c52917848e945229c0d33d632b10490');
-  let Buffer = ethereumjs.Buffer.Buffer;
-  let version = web3.version;
+	<script>
+		$(document).ready(function () {
+			let DEBUG = 1;
 
-  $('#newAccount').on('click', function(){
-    let account = web3.eth.accounts.create();
-    if (DEBUG) console.log("privateKey : ", account.privateKey);'	   
-    if (DEBUG) console.log("account : ", account.address);
-	  
-    $('#fromaddress').val(account.address);
-    $('#message').text(" account: " + account.address);
-    lert("Account 생성이 완료 되었습니다..!!!" + account.address);
-	//$('#i_password').val(privateKey);
-	//
-  })
-})
-</script>
+			const web3 = new Web3('https://ropsten.infura.io/v3/3c52917848e945229c0d33d632b10490');
+			let Buffer = ethereumjs.Buffer.Buffer;
+			let version = web3.version;
+		  
+		  let qrcode = new QRCode(document.getElementById("qrcode"), {
+			width : 250,
+			height : 250
+		  });
+
+		  function makeCode () {		
+			let elText = document.getElementById("fromaddress");
+			
+			if (!elText.value) {
+				alert("Input a text");
+				elText.focus();
+				return;
+			}
+			qrcode.makeCode(elText.value);
+		  } 
+  
+		  $('#qrcodeBtn').on('click', function(){
+			if (DEBUG) console.log("qrcodeBtn...... ");
+			   makeCode();   
+			}) // end of txbuilder
+			
+
+			if (DEBUG) {
+				console.log('starting...');
+				console.log("Ropsten Ethereum API version : ", version);
+				console.log("web3: ", web3);
+			} 
+			
+			$('#getbalance').on('click', async function () {
+			 let fromaddress = $("#fromaddress").val();
+			 let getbalance = await web3.eth.getBalance(fromaddress);
+			 let balance = web3.utils.fromWei(getbalance, "ether")
+
+			 if (DEBUG) console.log("balance : ", balance + " ETH");
+			$('#messagebal').text(" balance: " + balance + " ETH");
+			})
+			
+			$('#newAccount').on('click', async function () {
+
+				let account = web3.eth.accounts.create();
+
+				if (DEBUG) console.log("privateKey : ", account.privateKey);
+				if (DEBUG) console.log("account : ", account.address);
+
+				$('#fromaddress').val(account.address);
+				$('#privateKey').val(account.privateKey);
+
+        
+				$('#message').text(" account: " + account.address);
+				alert("Account 생성이 완료 되었습니다..!!!" + account.address);
+                alert("프라이빗 키는 절대 공유하지 마세요!!" + account.privateKey);
+				// getting the value
+				// let fromaddress = $("#fromaddress").val();
+
+				// setting the value
+				// $("#fromaddress").val( "new value here" );
+
+				// <h5>송신처 <input id="fromaddress" size="45" placeholder=""></input> </h5>
+				// <h5>수신처 <input id="toaddress" size="45" value="0x09BCeaC0A761E13f4e4F1461F0fD43dA25791588" placeholder=""></input> </h5>
+			})
+		})
+	</script>
 </head>
 
 <body>
-  <br>
-  <br>
-  <div class="container " role="main">
-    <h2><strong> 나의 전자기갑 </strong></h2>
-  	<div id="tablePlace"></div>
-	<button id="newAccount">New Account</button>
-  </div>
-  <br>
-  <br>
-  <div class="container " role="main">
-	<h4><strong> Message </strong></h4>
-    <div id="message"></div>
-  </div>
-<hr>
-<footer class="py-5 bg-dark">
+	<br>
+	<br>
+	<div class="container " role="main">
+		<h2><strong> My Ethereum Wallet </strong></h2>
+		<div id="tablePlace"></div>
+		
+	<br>
+	<br>
+    <h4><strong> 계좌 만들기 </strong></h4>
+		<h5> 생성된 주소 <input id="fromaddress" size="45" placeholder=" "></input> </h5>
+		<h5> 프라이빗 키 <input id="privateKey" size="70" placeholder=" "></input> </h5>
+		<button id="newAccount">New Account</button>
+		
+	
+	<br>
+	<div class="container " role="main">
+	<br>
+	<br>
+	<h4><strong> 계정 접속 </strong></h4>
+		
+	</div>
+	
+		<h5> 계정 <input id="" size="45" placeholder="계정입력"></input> </h5>
+		<h5> Password <input id="" size="45" placeholder="개인키 입력"></input> </h5>
+		<button id="">로그인 </button>
+	<br>
+	<br>
+	<br>
+	<br>
+	
+	<h4><strong> 이더 전송 </strong></h4>
+		
+		<h5> To <input id="" size="45" placeholder="보내는 곳 주소"></input> </h5>
+		<h5> ETH <input id="" size="45" placeholder="송금 금액"></input> </h5>
+		<h5> Password <input id="" size="45" placeholder="개인키 입력"></input> </h5>
+		<button id="">Send</button>
+		
+	</div>
+	<br>
+	<br>
+	<div class="container " role="main">
+		<h4><strong> Message </strong></h4>
+		<div id="message"></div>
+		<div id="qrcode" style="width:250px; height:250px; margin-top:15px;"></div>
+	</div>
+	<div class="container " role="main">
+		<h4><strong> 계좌잔액 </strong></h4>
+		<div id="messagebal"></div>
+		<br>
+		<button id="getbalance">잔액 확인</button>
+	</div>
+	    
+	
+	
+	<h4><strong> QR 코드 </strong></h4>
+
+    <button id="qrcodeBtn"> QR 코드 생성 </button>
+	
+	<hr>
+
+	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white"><b>copyright ⓒ Sunstar, Since 2015 . All Rights Reserved. </b></p>
+			<p class="m-0 text-center text-white"><b>for education. </b></p>
 		</div>
 	</footer>
+	
+
 </body>
+
 </html>
+
+
+
+
+
+
+
