--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@ index.html - Ethereum Wallet
 	</div>
 	
 		<h5> 계정 <input id="" size="45" placeholder="계정입력"></input> </h5>
-		<h5> Password <input id="" size="45" placeholder="개인키 입력"></input> </h5>
+		<h5> Passssssword <input id = "" type = "password" input id="" size="45" placeholder="개인키 입력"></input> </h5>
 		<button id="">로그인 </button>
 	<br>
 	<br>
